	new file:   ZGame/DX10/Shadow/Ahieve/tutorial10/Shadow Mapping/Shadow Mapping/Shadow Mapping.vcxproj
	new file:   ZGame/DX10/Shadow/Ahieve/tutorial10/Shadow Mapping/Shadow Mapping/Shadow Mapping.vcxproj.filters
	new file:   ZGame/DX10/Shadow/Ahieve/tutorial10/Shadow Mapping/Shadow Mapping/ShadowMap.fx
	new file:   ZGame/DX10/Shadow/Ahieve/tutorial10/Shadow Mapping/Shadow Mapping/ShadowMap.fxo
	new file:   ZGame/DX10/Shadow/Ahieve/tutorial10/Shadow Mapping/Shadow Mapping/main.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping.sln
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/Camera.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/Camera.h
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/DX10ExternalControls.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/DX10InitializeScene.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/DX10RenderFrame.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/DX10Renderer.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/DX10Renderer.h
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/DX10Resources.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/DX10Resources.h
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/HRTimer.h
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/NMD_Types.h
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/OBJLoader.cpp
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/OBJLoader.h
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/RawInput.h
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/Shadow Mapping.vcxproj
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/Shadow Mapping.vcxproj.filters
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/ShadowMap.fx
	new file:   ZGame/DX10/Shadow/Shadow Mapping/Shadow Mapping/main.cpp
