@@ -59,35 +59,44 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-      L161,  1:R#.1    @日知录
-      L169,  2:R#.2    @第17周总结 2015-04-26 --> 2015-05-02
-      L173,  3:zdo focus windows system programming 以及工程实践。
-      L176,  4:zkaizen 纯粹的肥肉还是别吃了；肉食类不要吃冷的。饭店吃饭尽量点热的。
-      L187,  5:R#.3    @国务院办公厅关于2015年部分节假日安排的通知
-      L207,  6:R#.4    @流程图 软件推荐
-      L229,  7:todo 阅读《我用VISIO制图》done 2015-04-28 16:26 当晚未看。
-      L232,  8:R#.5    @绘制类图，类继承
-      L237,  9:R#.6    @EA公司发表自制的EASTL规格 游戏开发方面对STL的性能及功能需求的特点
-      L241, 10:R#.7    @参考下 cp 上的 tl 功能，看能否增强n.tl
-      L246, 11:R#.8    @收集方方面面的模式和实例。
-      L252, 12:R#.9    @收集一份vc6的常用插件
-      L257, 13:R#.10   @zdo 使用 libcurl 写个http post[简繁转化]的例子
-      L262, 14:R#.11   @关灯吃面
-      L270, 15:R#.12   @znote astyle -A1 -R -z1 -n *.cpp
-      L274, 16:R#.13   @zlog hosts
-      L277, 17:zkz Moving from Research to Practice to Close the Achievement Gap
-      L280, 18:R#.14   @3ds max
-      L332, 19:zitem haptix/evolution3d googlecode
-      L335, 20:R#.15   @CMakeFile
-      L372, 21:R#.16   @3ds
-      L382, 22:zitem freeimage 结合play，载入其他类型素材（不限于tga）
-      L385, 23:R#.17   @high performance lock
-      L396, 24:R#.18   @3ds
-      L405, 25:R#.19   @znote BookList
-      L408, 26:todo 深入理解nginx redis设计与实现
-     Zndex_E : //z 2015-08-04 12:54:04 L.149'39956 T3362065362.K ~546 +----+----+----+----+----+
-     TimeCnt : //z 2015-08-04 12:52:36 L.149'40044 T3361993589.K ~25  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-07-21 13:07:21 L.163'39159 T3292602638.K ~25  +----+----+----+----+----+
+      L193,  1:R#.1    @日知录
+      L201,  2:R#.2    @第17周总结 2015-04-26 --> 2015-05-02
+      L205,  3:zdo focus windows system programming 以及工程实践。
+      L208,  4:zkaizen 纯粹的肥肉还是别吃了；肉食类不要吃冷的。饭店吃饭尽量点热的。
+      L219,  5:R#.3    @国务院办公厅关于2015年部分节假日安排的通知
+      L239,  6:R#.4    @流程图 软件推荐
+      L261,  7:todo 阅读《我用VISIO制图》done 2015-04-28 16:26 当晚未看。
+      L264,  8:R#.5    @绘制类图，类继承
+      L269,  9:R#.6    @EA公司发表自制的EASTL规格 游戏开发方面对STL的性能及功能需求的特点
+      L273, 10:R#.7    @参考下 cp 上的 tl 功能，看能否增强n.tl
+      L278, 11:R#.8    @收集方方面面的模式和实例。
+      L284, 12:R#.9    @收集一份vc6的常用插件
+      L289, 13:R#.10   @zdo 使用 libcurl 写个http post[简繁转化]的例子
+      L294, 14:R#.11   @关灯吃面
+      L302, 15:R#.12   @znote astyle -A1 -R -z1 -n *.cpp
+      L306, 16:R#.13   @zlog hosts
+      L309, 17:zkz Moving from Research to Practice to Close the Achievement Gap
+      L312, 18:R#.14   @3ds max
+      L364, 19:zitem haptix/evolution3d googlecode
+      L367, 20:R#.15   @CMakeFile
+      L404, 21:R#.16   @3ds
+      L414, 22:zitem freeimage 结合play，载入其他类型素材（不限于tga）
+      L417, 23:R#.17   @high performance lock
+      L428, 24:R#.18   @3ds
+      L437, 25:R#.19   @znote BookList
+      L440, 26:todo 深入理解nginx redis设计与实现
+      L484, 27:todo http://download.csdn.net/download/chengdz599/8792741 ??
+      L501, 28:R#.20   @书评
+      L514, 29:R#.21   @Game tmp
+      L528, 30:R#.22   @了解下 markdown 以及 lua
+      L532, 31:R#.23   @Matthew Fisher graphics project
+      L538, 32:zitem dx 10 的例子
+      L542, 33:R#.24   @leetcode
+      L581, 34:R#.25   @一些 game engine 
+     Zndex_E : //z 2015-08-06 08:26:38 L.147'56002 T2984285535.K ~553 +----+----+----+----+----+
+     TimeCnt : //z 2015-08-06 08:25:43 L.147'56057 T2984249626.K ~26  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-08-06 08:25:18 L.147'56082 T2984249532.K ~26  +----+----+----+----+----+
+     #26  R+ : //z 2015-08-06 08:25:18 L.147'56082 T2984249532.K ~26    V+.573  L+.634  
      #25  R+ : //z 2015-07-21 13:07:21 L.163'39159 T3292602638.K ~25    V+.501  L+.570  
      #24  R+ : //z 2015-07-16 13:06:43 L.168'39197 T1394128213.K ~24    V+.488  L+.528  
      #23  R+ : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~23    V+.474  L+.515  
@@ -113,9 +122,11 @@
      #3   R+ : //z 2015-04-27 11:35:34 L.248'44666 T1420042932.K ~3     V+.29   L+.108  
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
-     File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
+     File.Op : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2   +----+----+----+----+----+
+     #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-08-04 12:54:04 L.149'39956 T3362065362.K ~571   R+.25   L+.618  --+----+
+     Version : //z 2015-08-06 08:26:38 L.147'56002 T2984285535.K ~579   R+.26   L+.636  --+----+
+     #30  R+ : //z 2015-08-06 08:25:18 L.147'56082 T2984249532.K ~573   R+.26   L+.635  V+.573  
      #30  V+ : //z 2015-08-04 12:53:59 L.149'39961 T3362029595.K ~570   R+.25   L+.617  
      #29  V+ : //z 2015-07-30 10:32:40 L.154'48440 T1591220938.K ~551   R+.25   L+.612  
      #28  V+ : //z 2015-07-21 13:36:42 L.163'37398 T3296124531.K ~532   R+.25   L+.570  
@@ -618,3 +629,9 @@ http://www.directxtutorial.com/default.aspx
 windows game dx10 graphics ai 
 https://takinginitiative.wordpress.com/
 #endregion //z 2015-07-21 13:07:21 L.163'39159 BG57IV3@XCL T3292602638.K.F4146951713-+----+----+
+
+#region 08-06 08:25 R#.26   @znote merida 山地车
+//z 2015-08-06 08:25:43 L.147'56057 T2984249626.K[T26,L634,R26,V577]
+01. 座杆 80mm，车把80mm，直径 25.4
+02. 立杆 90mm ，直径 28.6
+#endregion //z 2015-08-06 08:25:18 L.147'56082 BG57IV3@BYH T2984249532.K.F4146951713-+----+----+
